[tool.poetry]
name = "repro-10620"
version = "0.1.0"
description = ""
authors = ["Uriel Mandujano <uriel@prefect.io>"]
readme = "README.md"
packages = [{include = "repro_10620"}]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "2.11.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.290"
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
